tests/integration/pilot/test_artifacts/pilot-b69b4fcf9fb24a978e2d0f26c/TestTraffic/virtualservice/fault_abort/tproxy/to_tproxy/_test_context/VirtualService.3782923190.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-20468
spec:
  hosts:
  - tproxy
  http:
  - fault:
      abort:
        httpStatus: 418
        percentage:
          value: 100
    route:
    - destination:
        host: tproxy
